# HackDuke2026

./: .gitmodules  README.md  flake.nix  pyproject.toml  repo-claude-help.md
.claude/: .last_archived_plan  settings.json
.claude/agents/: data-reviewer.md
.claude/commands/: spec_developer.md
.claude/hooks/: todo_session_start.sh  update_repo_help.sh
.direnv/: flake-profile-1-link
.local/: modal.toml
checkpoints/distill/: Conv1dStack_T2_a0.3.pt  sweep_results.json
checkpoints/sleepfm-sleepEDF/: evaluation_summary.md
circadia_summary/: Hack Duke 329e1938b506801a911bd62e8bb75463.md
frontend/zen-rhythm-display-main/: README.md  index.html  package-lock.json  playwright-fixture.ts:Zone.Identifier  tailwind.config.ts  vite.config.ts
modal_sample/: app.py
past-plans/2026-03-21/: 16-15-plan-circadia-full-stack-setup-sleepfm-distillation-for.md  17-14-plan-circadia-sleepfm-distillation-dual-frontend-jetson-web.md  22-49-plan-finetune-sleepfm-on-sleep-edf-for-sleep-staging.md
past-plans/2026-03-22/: 09-57-knowledge-distillation-sleepfm-jetson-tk1.md  (+2 more)
scripts/: benchmark_jetson.py
src/: augment.py  channel_map.py  config.yaml  dataset.py  evaluate.py  modal_app.py  modal_distill.py  preprocess.py  train.py
src/distill/: __init__.py  export.py  (+7 more)
todo/: 01-distillation-process.md  01-finetune-sleepfm-for-tk1-distillation.md  01-finetune-sleepfm-n1-staging.md  01-finetune-sleepfm.md  02-android-deployment.md  02-connect-front-end.md  02-quantize-prune-distill-sleepfm.md  03-test-compressed-model-performance.md  04-build-sleep-improvement-minigame.md
(+678 files in other folders)
