[project]
name = "circadia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "torch>=2.0",
    "mne>=1.6",
    "pyedflib>=0.1.35",
    "h5py>=3.10",
    "scipy>=1.12",
    "einops>=0.7",
    "loguru>=0.7",
    "modal>=0.60",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]
